--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
-    "nuxt": "^2.14.0"
+    "hooper": "^0.3.4",
+    "nuxt": "^2.14.0",
+    "vue-select": "^3.10.8",
+    "vue-slick-carousel": "^1.0.6",
+    "vue-slider-component": "^3.2.5",
+    "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
