locale and changes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.12.0",
     "hooper": "^0.3.4",
     "nuxt": "^2.14.0",
+    "nuxt-i18n": "^6.15.1",
     "vue-select": "^3.10.8",
     "vue-slick-carousel": "^1.0.6",
     "vue-slider-component": "^3.2.5",
