--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.18.1",
     "hooper": "^0.3.4",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.1.1",
     "nuxt": "^2.14.0",
     "nuxt-gmaps": "^1.2.10",
     "nuxt-i18n": "^6.15.1",
